--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "name": "Bakaleech v2.01415, a rapidleech fork",
-  "repository": "https://github.com/ItoshikiMonset/Bakaleech"
-  "success_url": "",
+  "repository": "https://github.com/ItoshikiMonset/Bakaleech",
   "buildpacks": [
     {
       "url": "heroku/php"
