--- a/app.json
+++ b/app.json
@@ -10,6 +10,12 @@
      {
       "url": "https://github.com/heroku/heroku-buildpack-apt"
      },
+         {
+      "url": "https://github.com/amivin/aria2-heroku.git"
+     },
+         {
+      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+     },
     {
     "url": "https://github.com/HasibulKabir/heroku-buildpack-rarlab.git"
     }
