--- a/files/.htaccess
+++ b/files/.htaccess
@@ -4,7 +4,7 @@ ForceType application/octet-stream
 ErrorDocument 403 "<html><head><title>403 Forbidden</title><meta http-equiv='refresh' content='0;URL=../deny.php' /></head><body><h1>403 Forbidden</h1></body></html>"
 
 <IfModule mod_rewrite.c>
-	RewriteEngine off
+	RewriteEngine on
 </IfModule>
 
 <files ~ "\.(?i:s?php.*|cgi|p[ly]|sh|asp|[dsp]?html?)$">
